[gd_scene load_steps=10 format=3 uid="uid://bsi7o7ccbv4e5"]

[ext_resource type="Script" path="res://script/ui/beginning_cutscene.gd" id="1_3fnqx"]
[ext_resource type="Texture2D" uid="uid://ckcbuwd4gn2hh" path="res://art/Object/Cutscene1.png" id="1_j0w6l"]
[ext_resource type="Texture2D" uid="uid://uer3pfnhf451" path="res://art/Object/Cutscene2.png" id="2_g6dyv"]
[ext_resource type="Texture2D" uid="uid://c3h8hf13d3544" path="res://art/Object/Cutscene3.png" id="3_4x1d3"]
[ext_resource type="FontFile" uid="uid://ck4da2ppnatlb" path="res://font/visitor1.ttf" id="4_obl4l"]
[ext_resource type="AudioStream" uid="uid://bcj8pyjo213db" path="res://sound/UI/click.wav" id="6_w8p8j"]
[ext_resource type="PackedScene" uid="uid://dbn7vglke3rix" path="res://scene/Ui/good_button.tscn" id="7_obgy8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wmsbw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_j0w6l")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_g6dyv")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_4x1d3")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_f0qyc"]
font = ExtResource("4_obl4l")
font_size = 10
font_color = Color(1, 0.968627, 0.388235, 1)

[node name="BeginningCutscene" type="Node2D"]
script = ExtResource("1_3fnqx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-47, -11)
sprite_frames = SubResource("SpriteFrames_wmsbw")
animation = &"2"
centered = false

[node name="Story" type="Label" parent="."]
offset_top = 140.0
offset_right = 320.0
offset_bottom = 180.0
text = "dave loves the suspiciously cheap
strawberry smoothie from the mall, it's his favorite
drink!"
label_settings = SubResource("LabelSettings_f0qyc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChangeTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="NextSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_w8p8j")
volume_db = -10.0

[node name="Next" parent="." instance=ExtResource("7_obgy8")]
offset_left = 233.0
offset_top = 100.0
offset_right = 313.0
offset_bottom = 129.0
text = "next"
first_focus = true

[node name="ReadyOrNot" type="Label" parent="."]
visible = false
offset_top = 40.0
offset_right = 320.0
offset_bottom = 80.0
text = "your muscle memory is going to
become useless!

get ready for some twister for
your fingers"
label_settings = SubResource("LabelSettings_f0qyc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReadyButtons" type="HBoxContainer" parent="."]
visible = false
offset_top = 142.0
offset_right = 320.0
offset_bottom = 171.0
alignment = 1

[node name="Yess" parent="ReadyButtons" instance=ExtResource("7_obgy8")]
layout_mode = 2
size_flags_horizontal = 8
text = " yes im ready >:) "

[connection signal="timeout" from="ChangeTimer" to="." method="_on_change_timer_timeout"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="ReadyButtons/Yess" to="." method="_on_yess_pressed"]
